--- a/.github/workflows/petstoresapp_ci_cd_to_appservice.yml
+++ b/.github/workflows/petstoresapp_ci_cd_to_appservice.yml
@@ -1,8 +1,8 @@
 name: Pet Store App CI/CD to Azure App Service
   
 env:
-  AZURE_CONTAINER_REGISTRY: mbidzazurepetstorecr.azurecr.io
-  AZURE_CONTAINER_REGISTRY_USERNAME: mbidzazurepetstorecr
+  AZURE_CONTAINER_REGISTRY: mbidzacr.azurecr.io
+  AZURE_CONTAINER_REGISTRY_USERNAME: mbidzacr
   
 on:
   push:
