--- a/manifests/azure-petstorepetservice-ci-cd-to-aks-pipeline.yml
+++ b/manifests/azure-petstorepetservice-ci-cd-to-aks-pipeline.yml
@@ -18,7 +18,7 @@ variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: 'azurepetstorecr'
   imageRepository: 'petstorepetservice'
-  containerRegistry: 'azurepetstorecontainerregistry.azurecr.io'
+  containerRegistry: 'mbidzcr.azurecr.io'
   dockerfilePath: 'petstore/petstorepetservice/Dockerfile'
   tag: '$(Build.BuildId)'
   imagePullSecret: '$(crImagePullSecretGlobalV3)'
