--- a/petstore/misc/petstore/azure-pipelines.yml
+++ b/petstore/misc/petstore/azure-pipelines.yml
@@ -18,7 +18,7 @@ variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: 'd8739820-01e9-4c2e-828f-62ef75654389'
   imageRepository: 'petstoreapi'
-  containerRegistry: 'petstorecr.azurecr.io'
+  containerRegistry: 'mbidzcr.azurecr.io'
   dockerfilePath: '**/Dockerfile'
   tag: '$(Build.BuildId)'
   imagePullSecret: '$(crImagePullSecret)'
