--- a/petstore/misc/manifests/deployment.yml
+++ b/petstore/misc/manifests/deployment.yml
@@ -16,7 +16,7 @@ spec:
         "beta.kubernetes.io/os": linux
       containers:
       - name: petstoreapi
-        image: petstorecr.azurecr.io/petstoreapi
+        image: mbidzcr.azurecr.io/petstoreapi
         resources:
           requests:
             cpu: 100m
